# autocorretor01

./: .gitignore  Cargo.toml  README.md  bench_results.txt  configurar_github.bat  enviar_para_github.bat  install.ps1  manual_bench_results.txt  package_names.txt
.cargo/: config.toml
crates/correction-engine/: Cargo.toml
crates/correction-engine/benches/: latency.rs
crates/correction-engine/src/: dict_loader.rs  lib.rs  typo_model.rs  validation.rs
crates/draco_body/: Cargo.toml
crates/draco_body/src/: composition.rs  fallback.rs  ipc.rs  key_event.rs  lib.rs  register.rs  tip.rs
crates/draco_brain/: Cargo.toml
crates/draco_brain/benches/: latency.rs
crates/draco_brain/src/: phonetic.rs  stage_a.rs  stage_b.rs  stage_c.rs  trie.rs
crates/draco_claws/: Cargo.toml  install_output.txt
crates/draco_claws/src/: main.rs
crates/draco_head/: Cargo.toml
crates/draco_head/src/: keyboard_hook.rs  main.rs  tray.rs
crates/ime-core/: Cargo.toml
crates/ime-core/src/: edit_session.rs  factory.rs  fallback.rs  globals.rs  ipc.rs  key_event.rs  tip.rs
crates/installer/: Cargo.toml
crates/installer/src/: main.rs
crates/tray-app/: Cargo.toml  build.rs
crates/tray-app/src/: keyboard_hook.rs  main.rs
data/: dictionary_pt_br.txt  dictionary_pt_br_full.txt
docs/: CRIAR_RELEASE.md
logs/: cargo_metadata.txt  cargo_metadata_full.json  cargo_metadata_nodeps.json  cargo_metadata_v2.txt
