[workspace]
members = [
    "crates/draco_body",
    "crates/draco_brain",
    "crates/draco_head",
    "crates/draco_claws",
]
resolver = "2"

# Patch da esaxx-rs: remove static_crt(true) do build.rs para resolver
# o conflito CRT /MT vs /MD com os binários pré-compilados do ort (ONNX Runtime).
[patch.crates-io]
esaxx-rs = { path = "crates/third_party/esaxx-rs" }
