[package]
name = "correction-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
unicode-segmentation = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = "2.0.0-rc.11"
tokenizers = "0.19"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "latency"
harness = false
