[package]
name = "draco_body"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_TextServices",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "implement",
] }
windows-core = "0.58"
tokio = { version = "1", features = ["sync", "net", "io-util", "rt", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
draco_brain = { path = "../draco_brain" }
