[package]
name = "tray-app"
version = "0.1.0"
edition = "2021"

[dependencies]
correction-engine = { path = "../correction-engine" }
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

[build-dependencies]
winresource = "0.1"

